Changes in version 1.4 (... 2007)

 - Changed parameter order of addArrowMesh and added default parameters such
   that it's enough to set the color (or even just the name).

 - Fixed bugs in MY3D and OBJ loader.

 - Added IMeshCache::clearUnusedMeshes(). This allows the user to remove 
   meshes that are sitting in the mesh cache but aren't used by any scene nodes. 
   This is useful for example when changing levels.

 - Added IUnknown::getReferenceCount()

 - createDevice now reports errors if the driverType is unknown, previously it 
   created a window but populated it with a null driver without any warning.

 - Fixed a bug in CBillboardTextSceneNode::setText where the old text was not 
   cleared.

 - Changed irrArray::linear_search to use the == operator rather than <
   This may be slower in some cases, but it no longer returns false positives
   when searching arrays of classes that override the < operator but 
   !(x<y) && !(y<x) does not necessarily mean x==y (vectors, positions etc).

 - Fixed getSize/getOriginalSize method inversion in OpenGL textures.

 - Added per texture-layer filter settings, i.e. one can choose to filter
   only chosen texture layers. If all layers are set to the same value the
   convenience function material.setFlag(EMF_BILINEAR_FILTER, boolean) can be
   used, TRILINEAR_FILTER and ANISOTROPIC_FILTER do work, too. In all other
   cases material.BilinearFilter[i] (resp. TrilinerFilter[i] or
   AnisotropicFilter[i]) shall are to be used.

 - Added adjustable Attenuation for dynamic lights. This allows to change the
   intensity of a light based on its distance. The default attenuation changed
   from (0,1/radius,0) to (1,0,0) which means no effect by distance. Good
   values for distance effects simply add small values to the second and third
   element.

 - Fixed a typo to do with 2nd light vectors in opengl parallax and normal map
   renderers.

GUI:

 - Added 7 more symbols to the built-in font and skin.